--- a/frontend_public/package.json
+++ b/frontend_public/package.json
@@ -28,10 +28,12 @@
   "dependencies": {
     "@iconify-icon/solid": "^3.0.0",
     "@solidjs/router": "^0.15.3",
+    "@thisbeyond/solid-select": "^0.15.0",
     "axios": "^1.9.0",
     "keen-slider": "^6.8.6",
     "lucide-solid": "^0.525.0",
     "solid-js": "^1.9.5",
+    "solid-select": "^0.0.1",
     "swiper": "^11.2.6",
     "tailwind-scrollbar": "^4.0.2",
     "tailwind-scrollbar-hide": "^2.0.0"
